bug 297338: Textareas lose the final chunk of text if the default contents are longer than 4096 characters long. r+sr=jst a=dbaron, patch by Blake Kaplan <mrbkap@gmail.com>